--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,10 @@ jobs:
           wget 'http://www.dest-unreach.org/socat/download/socat-1.8.0.0.tar.gz'
           tar xzvf 'socat-1.8.0.0.tar.gz'
           cd 'socat-1.8.0.0'
-          ./configure --prefix=/usr/local --disable-openssl --disable-readline --disable-libwrap
+          ./configure --disable-openssl --disable-readline --disable-libwrap
           make -j$(nproc)
-          make install
           mkdir /tmp/socat-1.8.0.0
-          cp /usr/local/bin/socat.exe /usr/bin/msys-2.0.dll /tmp/socat-1.8.0.0
+          cp ./socat.exe /usr/bin/msys-2.0.dll /tmp/socat-1.8.0.0
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
